--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             </div>
             <div>x→∞</div>
             <div>=</div>
-            <div>*.****</div>
-            <div></div>
+            <div>*.<span>****</span></div>
         </div>
         <div id="me-speak" style="display: none;"></div>
     </div>
